--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,6 @@
 # Copy this file to .env and fill in the values
+# DOMAIN=example.org
+# ADMIN_EMAIL=admin@${DOMAIN}
+# ROOT_URL=${DOMAIN}/app
 # DATABASE_URL=
 # API_KEY=
